crates/parser/tests/parser/snapshots/main__parser__parser_tests__binary_precedence.snap
---
source: crates/parser/tests/parser/parser_tests.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: f
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 11
            - 14
      body:
        BinaryOp:
          op: Add
          lhs:
            Lit:
              value:
                Int: 1
              span:
                - 17
                - 18
          rhs:
            BinaryOp:
              op: Mul
              lhs:
                Lit:
                  value:
                    Int: 2
                  span:
                    - 21
                    - 22
              rhs:
                Lit:
                  value:
                    Int: 3
                  span:
                    - 25
                    - 26
              span:
                - 21
                - 26
          span:
            - 17
            - 26
      doc: ~
      span:
        - 0
        - 26
