crates/parser/tests/parser/snapshots/main__parser__parser_tests__block.snap
---
source: crates/parser/tests/parser/parser_tests.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: f
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 11
            - 14
      body:
        Do:
          exprs:
            - Let:
                name: x
                ty: ~
                value:
                  Lit:
                    value:
                      Int: 1
                    span:
                      - 25
                      - 26
                body: ~
                span:
                  - 17
                  - 26
            - Let:
                name: y
                ty: ~
                value:
                  Lit:
                    value:
                      Int: 2
                    span:
                      - 36
                      - 37
                body: ~
                span:
                  - 28
                  - 37
            - BinaryOp:
                op: Add
                lhs:
                  Var:
                    name: x
                    span:
                      - 39
                      - 40
                rhs:
                  Var:
                    name: y
                    span:
                      - 43
                      - 44
                span:
                  - 39
                  - 44
          span:
            - 15
            - 46
      doc: ~
      span:
        - 0
        - 46
