crates/parser/tests/parser/snapshots/main__parser__parser_tests__boolean_ops.snap
---
source: crates/parser/tests/parser/parser_tests.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: f
      visibility: Private
      type_params: []
      params:
        - name: a
          ty:
            Named:
              name: Bool
              span:
                - 9
                - 13
          mode: Consume
          span:
            - 6
            - 13
        - name: b
          ty:
            Named:
              name: Bool
              span:
                - 18
                - 22
          mode: Consume
          span:
            - 15
            - 22
      constraints: []
      return_type:
        Named:
          name: Bool
          span:
            - 27
            - 31
      body:
        BinaryOp:
          op: Or
          lhs:
            BinaryOp:
              op: And
              lhs:
                Var:
                  name: a
                  span:
                    - 34
                    - 35
              rhs:
                Var:
                  name: b
                  span:
                    - 39
                    - 40
              span:
                - 34
                - 40
          rhs:
            UnaryOp:
              op: Not
              operand:
                Var:
                  name: a
                  span:
                    - 45
                    - 46
              span:
                - 44
                - 46
          span:
            - 34
            - 46
      doc: ~
      span:
        - 0
        - 46
