crates/parser/tests/parser/snapshots/main__parser__parser_tests__extern_decl.snap
---
source: crates/parser/tests/parser/parser_tests.rs
expression: module
---
decls:
  - Extern:
      platform: ~
      target: Java
      module_path: java.lang.Math
      alias: ~
      alias_visibility: ~
      is_trait: false
      type_params: []
      lifts: ~
      methods:
        - nullable: false
          throws: false
          instance: false
          constructor: false
          visibility: Private
          name: abs
          type_params: []
          params:
            - - x
              - Named:
                  name: Int
                  span:
                    - 47
                    - 50
          return_type:
            Named:
              name: Int
              span:
                - 55
                - 58
          where_clauses: []
          span:
            - 36
            - 58
        - nullable: false
          throws: false
          instance: false
          constructor: false
          visibility: Private
          name: max
          type_params: []
          params:
            - - a
              - Named:
                  name: Int
                  span:
                    - 74
                    - 77
            - - b
              - Named:
                  name: Int
                  span:
                    - 82
                    - 85
          return_type:
            Named:
              name: Int
              span:
                - 90
                - 93
          where_clauses: []
          span:
            - 63
            - 93
      span:
        - 1
        - 95
