crates/parser/tests/parser/snapshots/main__parser__parser_tests__field_access.snap
---
source: crates/parser/tests/parser/parser_tests.rs
expression: module
---
decls:
  - DefType:
      platform: ~
      name: P
      visibility: Private
      type_params: []
      kind:
        Record:
          fields:
            - - x
              - Named:
                  name: Int
                  span:
                    - 14
                    - 17
      deriving: []
      doc: ~
      span:
        - 0
        - 19
  - DefFn:
      platform: ~
      name: f
      visibility: Private
      type_params: []
      params:
        - name: p
          ty:
            Named:
              name: P
              span:
                - 29
                - 30
          mode: Consume
          span:
            - 26
            - 30
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 35
            - 38
      body:
        FieldAccess:
          expr:
            Var:
              name: p
              span:
                - 41
                - 42
          field: x
          span:
            - 41
            - 44
      doc: ~
      span:
        - 20
        - 44
