crates/parser/tests/parser/snapshots/main__parser__parser_tests__function_call.snap
---
source: crates/parser/tests/parser/parser_tests.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: f
      visibility: Private
      type_params: []
      params:
        - name: x
          ty:
            Named:
              name: Int
              span:
                - 9
                - 12
          mode: Consume
          span:
            - 6
            - 12
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 17
            - 20
      body:
        App:
          func:
            Var:
              name: add
              span:
                - 23
                - 26
          args:
            - Var:
                name: x
                span:
                  - 27
                  - 28
            - Lit:
                value:
                  Int: 1
                span:
                  - 30
                  - 31
          is_ufcs: false
          span:
            - 23
            - 32
      doc: ~
      span:
        - 0
        - 32
