crates/parser/tests/parser/snapshots/main__parser__parser_tests__if_else.snap
---
source: crates/parser/tests/parser/parser_tests.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: f
      visibility: Private
      type_params: []
      params:
        - name: x
          ty:
            Named:
              name: Int
              span:
                - 9
                - 12
          mode: Consume
          span:
            - 6
            - 12
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 17
            - 20
      body:
        If:
          cond:
            BinaryOp:
              op: Gt
              lhs:
                Var:
                  name: x
                  span:
                    - 26
                    - 27
              rhs:
                Lit:
                  value:
                    Int: 0
                  span:
                    - 30
                    - 31
              span:
                - 26
                - 31
          then_:
            Var:
              name: x
              span:
                - 34
                - 35
          else_:
            UnaryOp:
              op: Neg
              operand:
                Var:
                  name: x
                  span:
                    - 46
                    - 47
              span:
                - 45
                - 47
          span:
            - 23
            - 49
      doc: ~
      span:
        - 0
        - 49
