crates/parser/tests/parser/snapshots/main__parser__parser_tests__lambda.snap
---
source: crates/parser/tests/parser/parser_tests.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: f
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Fn:
          params:
            - mode: Consume
              ty:
                Named:
                  name: Int
                  span:
                    - 12
                    - 15
          ret:
            Named:
              name: Int
              span:
                - 20
                - 23
          span:
            - 11
            - 23
      body:
        Lambda:
          params:
            - name: x
              ty: ~
              mode: Consume
              span:
                - 26
                - 27
          body:
            BinaryOp:
              op: Add
              lhs:
                Var:
                  name: x
                  span:
                    - 31
                    - 32
              rhs:
                Lit:
                  value:
                    Int: 1
                  span:
                    - 35
                    - 36
              span:
                - 31
                - 36
          span:
            - 26
            - 36
      doc: ~
      span:
        - 0
        - 36
